# VoiceInput

./: .gitignore  README.md  build.bat  build.py  compile.txt  pyproject.toml  requirements.txt  voiceinput.spec
install/: VoiceInputInstaller.spec  build.py  build_installer.bat  build_installer.py  requirements.txt
install/src/: config.json  installer.py  uninstaller.py
lib/: LanguageOp.cp313-win_amd64.pyd
src/: VoiceInput.py  config.json  config.py  languages.xlsx  settings.json  voiceinput.spec
